# Kernel-Zxyphor

./: README.md  build.zig  linker.ld  main
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/acpi/: fadt.rs  madt.rs  mod.rs  subsystem.rs  tables.rs
rust/src/blk/: advanced_blk.rs  bio_crypt_zoned.rs  blkmq.rs  block_layer.rs  elevator.rs  io_scheduler_detail.rs  iosched.rs  mod.rs  request.rs
rust/src/compression/: algorithms.rs  crc32.rs  deflate.rs  lz4.rs  mod.rs  zstd.rs
rust/src/crypto/: advanced.rs  aes.rs  asymmetric.rs  chacha_poly.rs  framework.rs  hash_cipher_detail.rs  hmac.rs  mod.rs  post_quantum.rs  random.rs  rng_entropy.rs  sha256.rs  tls_ipsec.rs  tls_ipsec_detail.rs
rust/src/dev/: bio.rs  block.rs  chardev.rs  clk_iio_framework.rs  configfs.rs  device.rs  device_model.rs  dma_reset_pinctrl.rs  drm_display.rs  drm_kms.rs  drm_kms_pipeline.rs  firmware.rs  firmware_power.rs  gpio_clk_iio.rs  gpu_compute.rs  i2c_spi_bus.rs  kmod.rs  kobject.rs  media_display.rs  mod.rs  mtd_can_i3c.rs  notifier.rs  pci_hotplug_power.rs  platform_regmap.rs  sysfs.rs  tty.rs  usb_gadget_thermal.rs  usb_stack.rs  virtio.rs
rust/src/ffi/: bridge.rs  error.rs  mod.rs  syscall_compat.rs
rust/src/fs/: advanced_fs.rs  btrfs.rs  btrfs_structures.rs  ext4.rs  ext4_btrfs_ondisk.rs  f2fs_xfs_fscrypt.rs  fat32.rs  fscrypt_uring.rs  inotify.rs  journal.rs  mod.rs  mount.rs  nfs.rs  ondisk_formats.rs  overlayfs.rs  quota.rs  vfs_ext.rs  vfs_subsystem.rs  writeback.rs  xfs.rs
rust/src/ipc/: advanced_ipc.rs  epoll.rs  futex.rs  io_uring.rs  io_uring_detail.rs  message.rs  (+5 more)
(+507 files in other folders)
